# spicycrab-stubs

./: README.md  justfile
examples/: rust_attrs_test.py
examples/actix-web/: actix_01_hello.py  actix_02_multiple_routes.py  actix_03_json_response.py  actix_04_status_codes.py  actix_05_custom_headers.py  actix_06_request_info.py  actix_07_content_types.py  actix_08_api_versioning.py  actix_09_health_check.py  actix_10_rest_api.py  actix_11_error_responses.py  actix_12_redirect.py  actix_13_static_responses.py  actix_14_security_headers.py  actix_15_webhook.py  actix_16_combined_app.py
examples/anyhow/: 01_basic_result.py  03_parse_and_validate.py  04_path_validation.py  05_chain_operations.py  06_calculator.py  README.md  anyhow_02_error_propagation.py  anyhow_07_conditional_errors.py  anyhow_08_batch_processing.py
examples/base64/: base64_01_encode.py  base64_02_decode.py  base64_03_roundtrip.py  base64_04_encoded_len.py  base64_05_decoded_len.py
examples/chrono/: README.md  chrono_01_naive_date.py  chrono_02_naive_time.py  chrono_03_naive_datetime.py  chrono_04_utc_datetime.py  chrono_05_local_datetime.py  chrono_06_timedelta.py  chrono_07_weekday.py  chrono_08_date_arithmetic.py  chrono_09_months_days.py  chrono_10_fixed_offset.py
examples/clap/: 01_basic_args.py  02_flags.py  04_default_values.py  05_positional_args.py  09_conflicting_args.py  11_count_flag.py  13_hidden_args.py  README.md  clap_03_required_args.py  clap_06_multiple_values.py  clap_07_subcommands.py  clap_08_arg_groups.py  clap_10_requires.py  clap_11_count_flag.py  clap_12_help_version.py  clap_14_global_args.py  clap_15_full_app.py
examples/config/: config_01_default.py  config_02_builder.py  config_03_file.py  config_04_value.py  config_05_map.py
examples/env_logger/: env_logger_01_basic.py  env_logger_02_debug.py  env_logger_03_levels.py  env_logger_04_try_init.py  env_logger_05_builder.py
examples/fern/: README.md  fern_01_basic_setup.py  fern_02_log_levels.py  fern_03_stdout_logging.py  fern_04_stderr_logging.py  fern_05_module_levels.py  fern_06_chained_outputs.py  fern_07_colored_output.py  fern_07_debug_output.py  fern_08_error_filter.py  fern_08_panic_on_error.py  fern_09_date_based_files.py  fern_09_trace_logging.py  fern_10_complete_setup.py
examples/josekit/: josekit_01_hmac_sign.py  josekit_02_jwt_claims.py  josekit_03_hmac_hs384.py  josekit_04_hmac_hs512.py  josekit_05_rsa_rs256.py  josekit_06_ecdsa_es256.py  josekit_07_ecdsa_es384.py  josekit_08_eddsa.py  josekit_09_rsapss_ps256.py  josekit_10_direct_jwe.py  josekit_11_aeskw.py  josekit_12_aes256kw.py  josekit_13_aesgcmkw.py  josekit_14_pbes2.py  josekit_15_rsa_oaep.py  josekit_16_custom_claims.py  josekit_17_rs384.py  josekit_18_rs512.py  josekit_19_ps384.py  josekit_20_ps512.py  josekit_21_es512.py
examples/native_tls/: native_tls_01_connector.py
examples/reqwest/: reqwest_01_simple_get.py  reqwest_02_client_get.py  (+8 more)
stubs/actix-web/: README.md  pyproject.toml
stubs/actix-web-lab/: README.md  pyproject.toml
stubs/actix-web-lab/spicycrab_actix_web_lab/: __init__.py  _spicycrab.toml
stubs/actix-web/spicycrab_actix_web/: __init__.py  _spicycrab.toml
stubs/anyhow/: README.md  pyproject.toml
stubs/anyhow/spicycrab_anyhow/: __init__.py  _spicycrab.toml
stubs/base64/: README.md  pyproject.toml
stubs/base64/spicycrab_base64/: __init__.py  _spicycrab.toml
stubs/chrono/: README.md  pyproject.toml
stubs/chrono/spicycrab_chrono/: __init__.py  _spicycrab.toml
stubs/clap/: README.md  pyproject.toml
stubs/clap/spicycrab_clap/: __init__.py  _spicycrab.toml
stubs/clap_builder/: README.md  pyproject.toml
stubs/clap_builder/spicycrab_clap_builder/: __init__.py  _spicycrab.toml
stubs/config/: README.md  pyproject.toml
stubs/config/spicycrab_config/: __init__.py  _spicycrab.toml
stubs/env_logger/: README.md  pyproject.toml
stubs/env_logger/spicycrab_env_logger/: __init__.py  _spicycrab.toml
stubs/fern/: README.md  pyproject.toml
stubs/fern/spicycrab_fern/: __init__.py  _spicycrab.toml
stubs/grindvakt/: README.md  pyproject.toml
stubs/grindvakt/spicycrab_grindvakt/: __init__.py  _spicycrab.toml
stubs/josekit/: README.md  pyproject.toml
stubs/josekit/spicycrab_josekit/: __init__.py  _spicycrab.toml
stubs/lazy_static/: README.md  pyproject.toml
stubs/lazy_static/spicycrab_lazy_static/: __init__.py  _spicycrab.toml
stubs/log/: README.md  pyproject.toml
stubs/log/spicycrab_log/: __init__.py  _spicycrab.toml
stubs/native-tls/: README.md  pyproject.toml
stubs/native-tls/spicycrab_native_tls/: __init__.py  _spicycrab.toml
stubs/oidfed_metadata_policy/: README.md  pyproject.toml
stubs/oidfed_metadata_policy/spicycrab_oidfed_metadata_policy/: __init__.py  _spicycrab.toml
stubs/redis/: README.md  pyproject.toml
stubs/redis/spicycrab_redis/: __init__.py  _spicycrab.toml
stubs/reqwest/: README.md  pyproject.toml
stubs/reqwest/spicycrab_reqwest/: __init__.py  _spicycrab.toml
stubs/rustls/: README.md  pyproject.toml
stubs/rustls-pemfile/: README.md  pyproject.toml
stubs/rustls-pemfile/spicycrab_rustls_pemfile/: __init__.py  _spicycrab.toml
stubs/rustls/spicycrab_rustls/: __init__.py  _spicycrab.toml
stubs/serde/: README.md  pyproject.toml
stubs/serde/spicycrab_serde/: __init__.py  _spicycrab.toml
stubs/serde_json/: README.md  pyproject.toml
stubs/serde_json/spicycrab_serde_json/: __init__.py  _spicycrab.toml
stubs/sha2/: README.md  pyproject.toml
stubs/sha2/spicycrab_sha2/: __init__.py  _spicycrab.toml
stubs/tokio/: README.md  pyproject.toml
stubs/tokio/spicycrab_tokio/: __init__.py  _spicycrab.toml
stubs/toml/: README.md  pyproject.toml
stubs/toml/spicycrab_toml/: __init__.py  _spicycrab.toml
stubs/tunnelbana-core/: README.md  pyproject.toml
stubs/tunnelbana-core/spicycrab_tunnelbana_core/: __init__.py  _spicycrab.toml
stubs/tunnelbana-plugins/: README.md  pyproject.toml
stubs/tunnelbana-plugins/spicycrab_tunnelbana_plugins/: __init__.py  _spicycrab.toml
stubs/ureq/: README.md  pyproject.toml
stubs/ureq/spicycrab_ureq/: __init__.py  _spicycrab.toml
(+44 files in other folders)
