[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spicycrab-anyhow"
version = "1.0.100"
description = "spicycrab type stubs for the anyhow Rust crate"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."spicycrab.stubs"]
anyhow = "spicycrab_anyhow"

[tool.hatch.build.targets.wheel]
packages = ["spicycrab_anyhow"]
