[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spicycrab-clap_builder"
version = "4.5.54"
description = "spicycrab type stubs for the clap_builder Rust crate"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."spicycrab.stubs"]
clap_builder = "spicycrab_clap_builder"

[tool.hatch.build.targets.wheel]
packages = ["spicycrab_clap_builder"]
