[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spicycrab-config"
version = "0.15.19"
description = "spicycrab type stubs for the config Rust crate"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."spicycrab.stubs"]
config = "spicycrab_config"

[tool.hatch.build.targets.wheel]
packages = ["spicycrab_config"]
