[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spicycrab-fern"
version = "0.7.1"
description = "spicycrab type stubs for the fern Rust crate"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."spicycrab.stubs"]
fern = "spicycrab_fern"

[tool.hatch.build.targets.wheel]
packages = ["spicycrab_fern"]
