[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spicycrab-lazy_static"
version = "1.5.0"
description = "spicycrab type stubs for the lazy_static Rust crate"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."spicycrab.stubs"]
lazy_static = "spicycrab_lazy_static"

[tool.hatch.build.targets.wheel]
packages = ["spicycrab_lazy_static"]
