[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spicycrab-redis"
version = "1.0.2"
description = "spicycrab type stubs for the redis Rust crate"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."spicycrab.stubs"]
redis = "spicycrab_redis"

[tool.hatch.build.targets.wheel]
packages = ["spicycrab_redis"]
