[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spicycrab-reqwest"
version = "0.13.1"
description = "spicycrab type stubs for the reqwest Rust crate"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."spicycrab.stubs"]
reqwest = "spicycrab_reqwest"

[tool.hatch.build.targets.wheel]
packages = ["spicycrab_reqwest"]
