[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spicycrab-rustls"
version = "0.23.36"
description = "spicycrab type stubs for the rustls Rust crate"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."spicycrab.stubs"]
rustls = "spicycrab_rustls"

[tool.hatch.build.targets.wheel]
packages = ["spicycrab_rustls"]
