[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spicycrab-serde"
version = "1.0.228"
description = "spicycrab type stubs for the serde Rust crate"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."spicycrab.stubs"]
serde = "spicycrab_serde"

[tool.hatch.build.targets.wheel]
packages = ["spicycrab_serde"]
