[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spicycrab-tokio"
version = "1.49.0"
description = "spicycrab type stubs for the tokio Rust crate"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."spicycrab.stubs"]
tokio = "spicycrab_tokio"

[tool.hatch.build.targets.wheel]
packages = ["spicycrab_tokio"]
