[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spicycrab-tunnelbana-plugins"
version = "0.2.0"
description = "spicycrab type stubs for the tunnelbana-plugins Rust crate"
requires-python = ">=3.11"
dependencies = ["spicycrab-tunnelbana-core"]

[project.entry-points."spicycrab.stubs"]
tunnelbana-plugins = "spicycrab_tunnelbana_plugins"

[tool.hatch.build.targets.wheel]
packages = ["spicycrab_tunnelbana_plugins"]
